2.0:82: Port to OpenJDK 11 with external JavaFX