@@ -1,17 +1,67 @@
 #! /bin/bash
 
+# Les info fra filer
 version="$(cat version)"
 buildnum="$(cat buildnum)"
 
-compile_all() {
-	echo "Kompillerer kildekode"
+javafx_path="$(cat JAVAFX_PATH 2> /dev/null)"
+
+# Skriv feilmelding dersom filen ikke finnes
+if [[ $javafx_path == "" ]]; then
+	echo "Feil: Ingen 'JAVAFX_PATH'-fil"
+	echo ""
+	echo "Installasjonsskriptet trenger 'JAVAFX_PATH' som inneholder adressen"
+	echo "til JavaFX-installasjonen. Filen er laget, du må fikse innholdet før"
+	echo "neste kjøring."
+
+	echo "/PATH/TO/JAVAFX/lib" > JAVAFX_PATH
+	exit
+fi
+
+
+preprocess_sources() {
+	echo "Konfigurerer build"
 
 	# Oppdater versjonsnummer og build-nummer i kildefil
 	echo "s/\(public static final String SHORT_VERSION\s=\s\"\)\(.*\)\(\";\)/\1$version:$buildnum\3/g"  > sedcommand
 	sed -f sedcommand -i src/bbdebet2/gui/Main.java
 	echo "s/\(public static final String FULL_VERSION\s=\s\"\)\(.*\)\(\";\)/\1BBdebet $version\\\\nBuild nr $buildnum\3/g" > sedcommand
 	sed -f sedcommand -i src/bbdebet2/gui/Main.java
+
+	# Dytt JavaFX-sti inn i run.sh
+	# Escape / i $javafx_path
+	echo "$javafx_path" > JAVAFX_PATH_ESCAPED_SLASHES
+	sed 's/\//\\\//g' -i JAVAFX_PATH_ESCAPED_SLASHES
+	javafx_path_escaped_slashes="$(cat JAVAFX_PATH_ESCAPED_SLASHES)"
+	rm JAVAFX_PATH_ESCAPED_SLASHES
+
+	echo "s/JAVAFX_PATH/$javafx_path_escaped_slashes/g" > sedcommand
+	sed -f sedcommand -i etc/run.sh
 	rm sedcommand
+}
+
+
+postprocess_sources() {
+	# Endre tilbake for å unngå kjipe commits
+	echo "Rydder opp"
+
+	# Main.java 
+	echo "s/\(public static final String SHORT_VERSION\s=\s\"\)\(.*\)\(\";\)/\1\3/g"  > sedcommand
+	sed -f sedcommand -i src/bbdebet2/gui/Main.java
+	echo "s/\(public static final String FULL_VERSION\s=\s\"\)\(.*\)\(\";\)/\1\3/g" > sedcommand
+	sed -f sedcommand -i src/bbdebet2/gui/Main.java
+	rm sedcommand
+
+	# run.sh
+	echo "s/$javafx_path_escaped_slashes/JAVAFX_PATH/g" > sedcommand
+	sed -f sedcommand -i etc/run.sh
+	rm sedcommand
+}
+
+
+compile_all() {
+	echo "Kompillerer kildekode"
+
 
 	# Finn alle kildefiler
 	javafiles="$(find src/ -name "*java" | sed ':a;N;$!ba;s/\n/ /g')"
@@ -21,16 +71,11 @@ compile_all() {
 	mkdir -p out
 
 	# Kompiller
-	javac -d out -Xlint:unchecked -cp src:lib/javax.mail.jar:lib/activation.jar:lib/poi-4.0.1.jar $javafiles
+	javac -d out -Xlint:unchecked --module-path /usr/lib/jvm/javafx-sdk-11.0.2/lib --add-modules ALL-MODULE-PATH -cp src:lib/javax.mail.jar:lib/activation.jar:lib/poi-4.0.1.jar $javafiles
 	mkdir -p out/bbdebet2/gui/views
 	cp -r src/bbdebet2/gui/views out/bbdebet2/gui/
 
-	# Endre tilbake Main.java for å unngå kjipe commits
-	echo "s/\(public static final String SHORT_VERSION\s=\s\"\)\(.*\)\(\";\)/\1\3/g"  > sedcommand
-	sed -f sedcommand -i src/bbdebet2/gui/Main.java
-	echo "s/\(public static final String FULL_VERSION\s=\s\"\)\(.*\)\(\";\)/\1\3/g" > sedcommand
-	sed -f sedcommand -i src/bbdebet2/gui/Main.java
-	rm sedcommand
+
 
 
 	# Pakk alt inn i en JAR
@@ -40,6 +85,7 @@ compile_all() {
 	cd ..
 	mv out/bbdebet2.jar .
 }
+
 
 copy_files() {
 	echo "Kopierer filer"
@@ -67,20 +113,26 @@ copy_files() {
 	sudo ln -s /usr/local/share/bbdebet2/getdebet2data.sh /usr/local/bin/getdebet2data 2> /dev/null
 }
 
+
 make_save_dirs() {
 	mkdir -p ~/.bbdebet2
 	mkdir -p ~/.bbdebet2/autosave
 	mkdir -p ~/.bbdebet2/templates
 }
 
+
 cleanup() {
 	rm -f bbdebet2.jar
 }
+
 
 install_bbdebet2() {
 	# Sjekk at vi kan være root om vi vil
 	echo "Sjekker privilegier"
 	sudo echo "Root-tilgang OK!"
+
+	# Gjør småendringer i kildefiler
+	preprocess_sources
 
 	# Kompiller
 	compile_all
@@ -92,8 +144,10 @@ install_bbdebet2() {
 	make_save_dirs
 
 	# cleanup
+	postprocess_sources
 	cleanup
 }
+
 
 # Kontroller at vi _ikke_ er root
 if [[ "$EUID" == 0 ]]; then
